--- a/data/fcitx-keytheme.conf.in
+++ b/data/fcitx-keytheme.conf.in
@@ -1,7 +1,7 @@
 [Addon]
 Name=fcitx-keytheme
 _GeneralName=Keytheme
-_Comment=Keytheme Sinhala Input Method For Fcitx
+_Comment=Keytheme For Fcitx
 Category=Module
 Enabled=True
 Library=fcitx-keytheme.so
