--- a/po/POTFILES.in.in
+++ b/po/POTFILES.in.in
@@ -1,6 +1,7 @@
 # List of source files which contain translatable strings.
+./po/desc.po
 ./po/conf.po
 @REL_SOURCE_ROOT@/src/eim.c
 @REL_SOURCE_ROOT@/src/eim.h
-@REL_SOURCE_ROOT@/data/fcitx-sayura.conf.in
-@REL_SOURCE_ROOT@/data/sayura.conf.in
+@REL_SOURCE_ROOT@/src/config.c
+@REL_SOURCE_ROOT@/data/fcitx-keytheme.conf.in
